--- a/scss/guide.scss
+++ b/scss/guide.scss
@@ -30,13 +30,22 @@
     }
 }
 
+.register-button {
+    margin-top: 20px;
+}
+
 #guide-registration {
-    padding-top: 20px;
+    padding-top: 30px;
     display:none;
 }
 
+.registration-quote-area {
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
 .help-me-vote-toggle-area {
-    padding-top: 0;
+    padding-top: 20px;
     color: white;
     background-color: $splash-bg-color;
     padding-bottom: 20px;
