--- a/scss/guide.scss
+++ b/scss/guide.scss
@@ -31,7 +31,7 @@
 }
 
 .register-button {
-    margin-top: 20px;
+    margin-top: 30px;
 }
 
 #guide-registration {
@@ -51,9 +51,13 @@
     padding-bottom: 20px;
 }
 
+.toggle-vote-section {
+    margin-top: 20px;
+}
+
 #guide-vote {
     display:none;
-    padding-top: 20px;
+    padding-top: 30px;
 }
 
 #guide-vote-cta {
