--- a/css/styles.css
+++ b/css/styles.css
@@ -799,7 +799,7 @@ HELPER CLASSES
   padding-bottom: 20px; }
 
 .toggle-vote-section {
-  margin-top: 20px; }
+  margin-top: 30px; }
 
 #guide-vote {
   display: none;
@@ -894,8 +894,10 @@ button:active {
   background-color: #ff33c4; }
 
 .share-cta-box {
-  width: 88%;
-  margin: 0 auto; }
+  width: 100%;
+  margin: 0 auto;
+  margin-top: 10px;
+  padding-bottom: 20px; }
 
 /*--------------------
 SHARE
@@ -934,7 +936,7 @@ SHARE
   width: 180px;
   margin: 0 auto; }
   .share-instructions ol {
-    margin-left: -7px; }
+    margin-left: -13px; }
   .share-instructions li {
     font-size: 21px; }
 
