--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -49,10 +49,10 @@ button:active {
 }
 
 .share-cta-box {
-    //background-color: $splash-bg-color;
-    //padding: 20px 25px;
-    width: 88%;
+    width: 100%;
     margin: 0 auto;
+    margin-top: 10px;
+    padding-bottom: 20px;
 }
 
 @media (min-width: 768px) {
@@ -110,7 +110,7 @@ SHARE
     margin: 0 auto;
     
     ol {
-        margin-left: -7px;
+        margin-left: -13px;
     }
     
     li {
