--- a/scss/splash.scss
+++ b/scss/splash.scss
@@ -1,47 +1,8 @@
 @import "_base.scss";
 
 .splash {
-    overflow: hidden;
-    position: relative; //needed to make overflow work
-    background: none;
+    background: $splash-bg-color;
     color: white;
-    
-    
-    .background {
-
-        //Backup image for when video fails
-        background: $splash-bg-color;
-
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        z-index: -2;
-        margin-left: -1px;
-
-        video {
-            position: absolute;
-            min-width: 100%;
-            min-height: 100%;
-            z-index: -1000;
-            overflow: hidden;
-            border: none;
-        }
-    }
-
-    .call-to-action {
-        padding:0;
-        max-width: 950px;
-        margin: auto;
-        display: flex;
-
-        .sign-up {
-            align-self: center;
-        }
-
-        .vid-col {
-            padding: 0;
-        }
-    }
 }
 
 .video-section {
@@ -81,16 +42,16 @@
 }
 
 .headline {
+    font-size: 26px;
     text-align: center;
     color: white;
-    font-size: 40px;
     padding-top: 70px;
     margin-bottom: 10px;
 }
 
 .supporting-statement {
+    font-size: 22px;
     text-align: center;
-    font-size: 34px;
     margin-bottom: 20px;
     color: white;
 }
@@ -104,17 +65,39 @@
 .urgency-statement {
     text-align: center;
     color: white;
-    font-size: 24px;
     padding: 0 0;
-    margin-top: 30px;
+    margin-top: 20px;
     padding-bottom: 25px;
     
-    strong {
-        font-size: 26px;
+
+}
+
+
+@media (min-width: 768px) {
+    .headline {
+        font-size: 30px;   
+    }
+    
+    .supporting-statement {
+        font-size: 26px;   
     }
 }
 
-.mobile-vid {
+@media (min-width: 1170px) { 
+    .headline {
+        font-size: 40px;   
+    }
     
+    .supporting-statement {
+        font-size: 34px;   
+    }
+    
+    .urgency-statement {
+        font-size: 24px;  
+        margin-top: 30px;
+        
+        strong {
+            font-size: 26px;
+        }
+    }
 }
-
