--- a/scss/guide.scss
+++ b/scss/guide.scss
@@ -115,3 +115,12 @@
         font-size: 30px;   
     }
 }
+
+.guide-facebook-cta-section {
+    background-color: #250C3D;
+    color: white;
+    padding-top: 20px;
+    margin-bottom: 30px;
+    padding-bottom: 10px; 
+    width: 100%;
+}
