--- a/scss/splash.scss
+++ b/scss/splash.scss
@@ -38,7 +38,7 @@
     font-size: 26px;
     text-align: center;
     color: white;
-    padding-top: 70px;
+    padding-top: 65px;
     margin-bottom: 10px;
 }
 
@@ -63,6 +63,11 @@
     padding-bottom: 25px;
     
 
+}
+
+.pre-register-button {
+    text-align: center;
+    
 }
 
 @media (min-width: 768px) {
