--- a/css/styles.css
+++ b/css/styles.css
@@ -488,7 +488,11 @@ HELPER CLASSES
   text-align: center; }
 
 @media (min-width: 768px) {
+  .splash {
+    padding-bottom: 50px; }
+
   .headline {
+    padding-top: 75px;
     font-size: 30px; }
 
   .supporting-statement {
@@ -1035,7 +1039,8 @@ SHARE
   .canada-area h2 {
     font-size: 30px; } }
 .fb-area {
-  padding-top: 20px; }
+  padding-top: 20px;
+  padding-bottom: 20px; }
 
 .stButton .st-twitter-counter {
   padding-bottom: 20px !important; }
