WIP campus landing page.

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,9 +1,10 @@
-@import "base.scss";
+@import "_base.scss";
 @import "navbar.scss";
 @import "footer.scss";
 @import "splash.scss";
 @import "points.scss";
 @import "guide.scss";
+@import "campus.scss";
 
 // Buttons
 button {
