--- a/css/styles.css
+++ b/css/styles.css
@@ -863,6 +863,172 @@ HELPER CLASSES
   padding-bottom: 10px;
   width: 100%; }
 
+/*--------------------
+COLORS
+--------------------*/
+.color1-background {
+  color: white;
+  background: #CEEC97; }
+
+.color2-background {
+  color: white;
+  background: #F4B393; }
+
+.color3-background {
+  background: #7A28CB; }
+
+.color4-background {
+  background: #494368;
+  color: white; }
+
+.color4-shadow-background {
+  background: #332f49;
+  color: white; }
+
+.color5-background {
+  background: #ff00b5; }
+
+/*--------------------
+DEFAULTS
+--------------------*/
+h1, h2, h3, h4, h5, h6 {
+  margin-top: 0;
+  margin-bottom: 20px; }
+
+body {
+  font-family: "Roboto";
+  font-size: 1.8em;
+  font-weight: 200;
+  line-height: 1.5em; }
+
+h1, h2, h3 {
+  font-family: "Oswald";
+  line-height: 1.3em;
+  margin-bottom: 20px; }
+
+h3 {
+  font-weight: 200; }
+
+h4 {
+  font-weight: 200; }
+
+input {
+  width: 100%;
+  color: black;
+  padding: 10px;
+  border-radius: 5px;
+  border: none; }
+
+/*--------------------
+HIDING SHIT
+--------------------*/
+@media (max-width: 767px) {
+  .mobile-only {
+    display: block !important; }
+
+  .tablet-up {
+    display: none !important; } }
+@media (min-width: 768px) {
+  .mobile-only {
+    display: none !important; }
+
+  .tablet-up {
+    display: block !important; } }
+/*--------------------
+HELPER CLASSES
+--------------------*/
+.center, .guide-title, .guide-subheader {
+  text-align: center; }
+
+.center-block {
+  display: block;
+  margin: 0 auto; }
+
+.right {
+  text-align: right; }
+
+.pad {
+  padding: 20px; }
+
+.add-margin-bottom {
+  margin-bottom: 40px; }
+
+.pad-top-and-bottom {
+  padding: 40px 0px 40px 0px; }
+
+.flex-container {
+  display: flex; }
+  .flex-container .flex-vcenter {
+    align-self: center; }
+
+.no-pad {
+  padding: 0px; }
+
+.no-pad-top {
+  padding-top: 0px; }
+
+.no-pad-bottom {
+  padding-bottom: 0px; }
+
+.no-bottom {
+  padding-bottom: 0;
+  margin-bottom: 0; }
+
+.half-pad-top {
+  padding-top: 20px; }
+
+.special-ballot-basic-info {
+  padding-top: 20px;
+  padding-bottom: 20px; }
+
+.date-headline {
+  margin-top: 60px;
+  font-size: 70px;
+  margin-bottom: 0; }
+
+.vote-headline {
+  margin-top: -15px;
+  font-size: 120px;
+  margin-bottom: 0; }
+
+.campus-text-container {
+  width: 240px;
+  margin: 0 auto; }
+
+.campus-text {
+  margin-bottom: 0; }
+
+.thats-right {
+  color: black;
+  font-size: 24px; }
+
+.hometown-riding-headline {
+  margin-top: -7px;
+  font-size: 26px; }
+
+.on-campus-headline {
+  text-transform: uppercase;
+  margin-top: 5px;
+  font-size: 50px;
+  padding-bottom: 15px; }
+
+.how-headline {
+  margin-bottom: 0;
+  text-transform: uppercase;
+  font-size: 100px;
+  color: black;
+  text-align: center; }
+
+.where-headline {
+  margin-bottom: 0;
+  text-transform: uppercase;
+  font-size: 100px;
+  color: black; }
+
+.campus-img {
+  max-width: 100%;
+  margin-bottom: 10px; }
+
 button {
   position: relative;
   vertical-align: top;
