--- a/css/styles.css
+++ b/css/styles.css
@@ -981,6 +981,10 @@ HELPER CLASSES
   padding-top: 20px;
   padding-bottom: 20px; }
 
+.campus-splash {
+  background: #250C3D;
+  color: white; }
+
 .date-headline {
   margin-top: 60px;
   font-size: 70px;
@@ -1020,14 +1024,18 @@ HELPER CLASSES
   text-align: center; }
 
 .where-headline {
+  text-align: center;
   margin-bottom: 0;
   text-transform: uppercase;
   font-size: 100px;
   color: black; }
 
 .campus-img {
-  max-width: 100%;
+  width: 290px;
   margin-bottom: 10px; }
+
+.post-fb-text {
+  margin-top: 10px; }
 
 button {
   position: relative;
