--- a/scss/campus.scss
+++ b/scss/campus.scss
@@ -5,6 +5,11 @@
     padding-bottom: 20px;
 }
 
+.campus-splash {
+    background: $splash-bg-color;
+    color: white;
+}
+
 .date-headline {
     margin-top: 60px;
     font-size: 70px;
@@ -52,6 +57,7 @@
 }
 
 .where-headline {
+    text-align: center;
     margin-bottom: 0;
     text-transform: uppercase;
     font-size: 100px;
@@ -59,6 +65,10 @@
 }
 
 .campus-img {
-    max-width: 100%;
+    width: 290px;
     margin-bottom: 10px;
+}
+
+.post-fb-text {
+    margin-top: 10px;
 }
