--- a/css/styles.css
+++ b/css/styles.css
@@ -1037,6 +1037,17 @@ HELPER CLASSES
 .post-fb-text {
   margin-top: 10px; }
 
+.wat {
+  background: #250C3D;
+  color: white; }
+
+.wat-headline {
+  text-align: center;
+  margin-bottom: 0;
+  text-transform: uppercase;
+  font-size: 100px;
+  color: white; }
+
 button {
   position: relative;
   vertical-align: top;
