--- a/scss/campus.scss
+++ b/scss/campus.scss
@@ -72,3 +72,16 @@
 .post-fb-text {
     margin-top: 10px;
 }
+
+.wat {
+    background: $splash-bg-color;
+    color: white;
+}
+
+.wat-headline {
+    text-align: center;
+    margin-bottom: 0;
+    text-transform: uppercase;
+    font-size: 100px;
+    color: white;
+}
