--- a/scss/campus.scss
+++ b/scss/campus.scss
@@ -23,7 +23,7 @@
 }
 
 .campus-text-container {
-    width: 240px;
+    width: 270px;
     margin: 0 auto;
 }
 
@@ -70,7 +70,8 @@
 }
 
 .post-fb-text {
-    margin-top: 10px;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 .wat {
