--- a/scss/campus.scss
+++ b/scss/campus.scss
@@ -23,6 +23,7 @@
 }
 
 .campus-text-container {
+    padding-top: 5px;
     width: 270px;
     margin: 0 auto;
 }
@@ -38,7 +39,7 @@
 
 .hometown-riding-headline {
     margin-top: -7px;
-    font-size: 26px;
+    font-size: 40px;
 }
 
 .on-campus-headline {
@@ -85,4 +86,8 @@
     text-transform: uppercase;
     font-size: 100px;
     color: white;
+}
+
+.how-who-whr {
+    padding-bottom: 5px;
 }
